// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importFromPMCStatCallGraph 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "fork_exit",
      "line": undefined,
      "name": "fork_exit",
      "selfWeight": 0,
      "totalWeight": 7448,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "taskqueue_thread_loop",
      "line": undefined,
      "name": "taskqueue_thread_loop",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "taskqueue_run_locked",
      "line": undefined,
      "name": "taskqueue_run_locked",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zio_execute",
      "line": undefined,
      "name": "zio_execute",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zio_write_compress",
      "line": undefined,
      "name": "zio_write_compress",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zio_compress_data",
      "line": undefined,
      "name": "zio_compress_data",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zfs_lz4_compress",
      "line": undefined,
      "name": "zfs_lz4_compress",
      "selfWeight": 7447,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "amd64_syscall",
      "line": undefined,
      "name": "amd64_syscall",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "sys_pwrite",
      "line": undefined,
      "name": "sys_pwrite",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "kern_pwritev",
      "line": undefined,
      "name": "kern_pwritev",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "dofilewrite",
      "line": undefined,
      "name": "dofilewrite",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "vn_io_fault",
      "line": undefined,
      "name": "vn_io_fault",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "vn_io_fault1",
      "line": undefined,
      "name": "vn_io_fault1",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "vn_io_fault_doio",
      "line": undefined,
      "name": "vn_io_fault_doio",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "vn_write",
      "line": undefined,
      "name": "vn_write",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "VOP_WRITE_APV",
      "line": undefined,
      "name": "VOP_WRITE_APV",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zfs_freebsd_write",
      "line": undefined,
      "name": "zfs_freebsd_write",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zfs_write",
      "line": undefined,
      "name": "zfs_write",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "dmu_write_uio_dnode",
      "line": undefined,
      "name": "dmu_write_uio_dnode",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "dmu_buf_will_dirty_impl",
      "line": undefined,
      "name": "dmu_buf_will_dirty_impl",
      "selfWeight": 0,
      "totalWeight": 1490,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "arc_buf_thaw",
      "line": undefined,
      "name": "arc_buf_thaw",
      "selfWeight": 0,
      "totalWeight": 1490,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "arc_cksum_verify",
      "line": undefined,
      "name": "arc_cksum_verify",
      "selfWeight": 0,
      "totalWeight": 1490,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "fletcher_2_native",
      "line": undefined,
      "name": "fletcher_2_native",
      "selfWeight": 1490,
      "totalWeight": 1490,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "txg_sync_thread",
      "line": undefined,
      "name": "txg_sync_thread",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "spa_sync",
      "line": undefined,
      "name": "spa_sync",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "spa_flush_metaslabs",
      "line": undefined,
      "name": "spa_flush_metaslabs",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "metaslab_unflushed_bump",
      "line": undefined,
      "name": "metaslab_unflushed_bump",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "metaslab_set_unflushed_txg",
      "line": undefined,
      "name": "metaslab_set_unflushed_txg",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "dmu_write",
      "line": undefined,
      "name": "dmu_write",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "dmu_write_impl",
      "line": undefined,
      "name": "dmu_write_impl",
      "selfWeight": 0,
      "totalWeight": 1,
    },
  ],
  "name": "simple.txt",
  "stacks": Array [
    "fork_exit;taskqueue_thread_loop;taskqueue_run_locked;zio_execute;zio_write_compress;zio_compress_data;zfs_lz4_compress 7,447",
    "amd64_syscall;sys_pwrite;kern_pwritev;dofilewrite;vn_io_fault;vn_io_fault1;vn_io_fault_doio;vn_write;VOP_WRITE_APV;zfs_freebsd_write;zfs_write;dmu_write_uio_dnode;dmu_buf_will_dirty_impl;arc_buf_thaw;arc_cksum_verify;fletcher_2_native 1,489",
    "fork_exit;txg_sync_thread;spa_sync;spa_flush_metaslabs;metaslab_unflushed_bump;metaslab_set_unflushed_txg;dmu_write;dmu_write_impl;dmu_buf_will_dirty_impl;arc_buf_thaw;arc_cksum_verify;fletcher_2_native 1",
  ],
}
`;

exports[`importFromPMCStatCallGraph with invalid lines 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "fork_exit",
      "line": undefined,
      "name": "fork_exit",
      "selfWeight": 0,
      "totalWeight": 7448,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "taskqueue_thread_loop",
      "line": undefined,
      "name": "taskqueue_thread_loop",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "taskqueue_run_locked",
      "line": undefined,
      "name": "taskqueue_run_locked",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zio_execute",
      "line": undefined,
      "name": "zio_execute",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zio_write_compress",
      "line": undefined,
      "name": "zio_write_compress",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zio_compress_data",
      "line": undefined,
      "name": "zio_compress_data",
      "selfWeight": 0,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zfs_lz4_compress",
      "line": undefined,
      "name": "zfs_lz4_compress",
      "selfWeight": 7447,
      "totalWeight": 7447,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "amd64_syscall",
      "line": undefined,
      "name": "amd64_syscall",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "sys_pwrite",
      "line": undefined,
      "name": "sys_pwrite",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "kern_pwritev",
      "line": undefined,
      "name": "kern_pwritev",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "dofilewrite",
      "line": undefined,
      "name": "dofilewrite",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "vn_io_fault",
      "line": undefined,
      "name": "vn_io_fault",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "vn_io_fault1",
      "line": undefined,
      "name": "vn_io_fault1",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "vn_io_fault_doio",
      "line": undefined,
      "name": "vn_io_fault_doio",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "vn_write",
      "line": undefined,
      "name": "vn_write",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/kernel",
      "key": "VOP_WRITE_APV",
      "line": undefined,
      "name": "VOP_WRITE_APV",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zfs_freebsd_write",
      "line": undefined,
      "name": "zfs_freebsd_write",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "zfs_write",
      "line": undefined,
      "name": "zfs_write",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "dmu_write_uio_dnode",
      "line": undefined,
      "name": "dmu_write_uio_dnode",
      "selfWeight": 0,
      "totalWeight": 1489,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "dmu_buf_will_dirty_impl",
      "line": undefined,
      "name": "dmu_buf_will_dirty_impl",
      "selfWeight": 0,
      "totalWeight": 1490,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "arc_buf_thaw",
      "line": undefined,
      "name": "arc_buf_thaw",
      "selfWeight": 0,
      "totalWeight": 1490,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "arc_cksum_verify",
      "line": undefined,
      "name": "arc_cksum_verify",
      "selfWeight": 0,
      "totalWeight": 1490,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "fletcher_2_native",
      "line": undefined,
      "name": "fletcher_2_native",
      "selfWeight": 1490,
      "totalWeight": 1490,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "txg_sync_thread",
      "line": undefined,
      "name": "txg_sync_thread",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "spa_sync",
      "line": undefined,
      "name": "spa_sync",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "spa_flush_metaslabs",
      "line": undefined,
      "name": "spa_flush_metaslabs",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "metaslab_unflushed_bump",
      "line": undefined,
      "name": "metaslab_unflushed_bump",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "metaslab_set_unflushed_txg",
      "line": undefined,
      "name": "metaslab_set_unflushed_txg",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "dmu_write",
      "line": undefined,
      "name": "dmu_write",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/boot/kernel/zfs.ko",
      "key": "dmu_write_impl",
      "line": undefined,
      "name": "dmu_write_impl",
      "selfWeight": 0,
      "totalWeight": 1,
    },
  ],
  "name": "simple-with-invalids.txt",
  "stacks": Array [
    "fork_exit;taskqueue_thread_loop;taskqueue_run_locked;zio_execute;zio_write_compress;zio_compress_data;zfs_lz4_compress 7,447",
    "amd64_syscall;sys_pwrite;kern_pwritev;dofilewrite;vn_io_fault;vn_io_fault1;vn_io_fault_doio;vn_write;VOP_WRITE_APV;zfs_freebsd_write;zfs_write;dmu_write_uio_dnode;dmu_buf_will_dirty_impl;arc_buf_thaw;arc_cksum_verify;fletcher_2_native 1,489",
    "fork_exit;txg_sync_thread;spa_sync;spa_flush_metaslabs;metaslab_unflushed_bump;metaslab_set_unflushed_txg;dmu_write;dmu_write_impl;dmu_buf_will_dirty_impl;arc_buf_thaw;arc_cksum_verify;fletcher_2_native 1",
  ],
}
`;

exports[`importFromPMCStatCallGraph with invalid lines: indexToView 1`] = `0`;

exports[`importFromPMCStatCallGraph with invalid lines: profileGroup.name 1`] = `"simple-with-invalids.txt"`;

exports[`importFromPMCStatCallGraph: indexToView 1`] = `0`;

exports[`importFromPMCStatCallGraph: profileGroup.name 1`] = `"simple.txt"`;
